Add Firestore configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# APP
+spring.application.name=portfolio-api
+server.port=8087
+server.max-http-header-size=20KB
+server.servlet.context-path=/portfolio/api/v1
 
+# FIREBASE
+firebase.service-account-file=admin-sdk.json
+firebase.database-url=${DB_URL}
