--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>portfolio-api</artifactId>
     <version>0.0.1</version>
     <name>portfolio-api</name>
-    <description>My protfolio data initialization API</description>
+    <description>My portfolio data initialization API</description>
     <properties>
         <java.version>11</java.version>
         <firebase.version>8.0.1</firebase.version>
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
