--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Test
 
 on:
   pull_request:
@@ -19,4 +19,4 @@ jobs:
         with:
           java-version: 11
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn test
